# rust-xmpp

./: README.md  TODO.md
cb-client/: Cargo.toml
cb-server/: Cargo.toml
chibi-client/: Cargo.toml
chibi-server/: Cargo.toml
libcb/: Cargo.toml
libchibi/: Cargo.toml
